gccida/c3/dw2_asm_output_nstring
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/dwarf2asm.c:733:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v8] & 0x10) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/dwarf2asm.c:783:7: error: use of undeclared identifier 'byte_67FFC0'
v16 = byte_67FFC0[v15]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/dwarf2asm.c:791:7: error: use of undeclared identifier 'byte_67FFC0'
v16 = byte_67FFC0[v15]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/dwarf2asm.c:826:7: error: use of undeclared identifier 'byte_67FFC0'
v19 = byte_67FFC0[v13]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/dwarf2asm.c:834:6: error: use of undeclared identifier 'byte_67FFC0'
if ( byte_67FFC0[v13] ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_nstring/src/obj/dwarf2asm.o] Error 1
